# rutile

./: README.md  configure.sh
codecs/json/: Cargo.toml
codecs/json/src/: lib.rs
codecs/msgpack/: Cargo.toml
codecs/msgpack/src/: lib.rs
examples/: Cargo.toml
examples/src/: client.rs  hello_service.rs  server.rs  test1.rs
examples/src/test_service/: hello.rs  lib.rs  person.rs
rpc/: Cargo.toml
rpc/src/: client.rs  codec.rs  context.rs  error.rs  handler.rs  lib.rs  server.rs  service.rs  transport.rs
rpc/src/codec/: json_codec.rs  mod.rs
rpc/src/transport/: client.rs  http_transport.rs  mod.rs  server.rs
rpc_codegen/: Cargo.toml
rpc_codegen/src/: codec.rs  lib.rs  version.rs
rpc_macros/: Cargo.toml
rpc_macros/src/: lib.rs
transports/http/: Cargo.toml
transports/http/src/: client.rs  lib.rs  server.rs
transports/zmq/: Cargo.toml
transports/zmq/src/: lib.rs
