[package]
name = "rpc_examples"
version = "0.1.0"
authors = ["Jeremy Letang <letang.jeremy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Macros to auto-generate rpc implementations"
repository = "https://github.com/jeremyletan/rpc"
documentation = "https://github.com/jeremyletang/rpc"
keywords = ["rpc", "http"]
include = ["Cargo.toml", "src/**/*.rs"]

[[bin]]
name = "test1"
path = "src/test1.rs"

[build-dependencies]
rpc_codegen = { version = "0.1.0", path = "../rpc_codegen" }
rpc_macros = { version = "0.1.0", path = "../rpc_macros" }

[dependencies]
rpc_codegen = { version = "0.1.0", path = "../rpc_codegen" }
rpc_macros = { version = "0.1.0", path = "../rpc_macros" }
