[package]
name = "rpc_examples"
version = "0.1.0"
authors = ["Jeremy Letang <letang.jeremy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Macros to auto-generate rpc implementations"
repository = "https://github.com/jeremyletan/rpc"
documentation = "https://github.com/jeremyletang/rpc"
keywords = ["rpc", "http"]
include = ["Cargo.toml", "src/**/*.rs"]

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[lib]
name = "test_service"
path = "src/test_service/lib.rs"

[build-dependencies]
rpc_codegen = { version = "0.1.0", path = "../rpc_codegen" }
rpc_macros = { version = "0.1.0", path = "../rpc_macros" }

[dependencies]
rpc = { version = "0.1.0", path = "../rpc" }
rpc_codegen = { version = "0.1.0", path = "../rpc_codegen" }
rpc_macros = { version = "0.1.0", path = "../rpc_macros" }
serde = "0.7.12"
serde_json = "0.7.4"
serde_macros = "0.7.12"
log = "0.3.6"
env_logger = "0.3.3"
# transports
http_transport = {version = "0.1.0", path = "../transports/http" }
zmq_transport = {version = "0.1.0", path = "../transports/zmq" }
# codecs
json_codec = {version = "0.1.0", path = "../codecs/json" }
msgp_codec = {version = "0.1.0", path = "../codecs/msgpack" }
