[package]
name = "rpc"
version = "0.1.0"
authors = ["Jeremy Letang <letang.jeremy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "codegen for rpc implementations"
repository = "https://github.com/jeremyletan/rpc"
documentation = "https://github.com/jeremyletang/rpc"
keywords = ["rpc", "http"]
include = ["Cargo.toml", "src/**/*.rs"]


[dependencies]
# clippy = "*"
serde = "*"
serde_json = "*"
serde_macros = "*"
typemap = "0.3.3"
log = "0.3.6"
hyper = "0.9.9"
