[package]
name = "rpc_codegen"
version = "0.1.0"
authors = ["Jeremy Letang <letang.jeremy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "codegen for rpc implementations"
repository = "https://github.com/jeremyletan/rpc"
documentation = "https://github.com/jeremyletang/rpc"
keywords = ["rpc", "http"]
include = ["Cargo.toml", "src/**/*.rs"]

[build-dependencies]
quasi_codegen = { version = "^0.15.0", optional = true }
clippy = { version = "^0.*", optional = true }

[dependencies]
git2 = "0.3"
quasi_macros = { version = "^0.15.0", optional = false }
rpc = { version = "0.1.0", path = "../rpc" }
quasi = { version = "^0.15.0", default-features = false }
aster = { version = "^0.21.1", default-features = false }
