[package]
name = "zmq_transport"
version = "0.1.0"
authors = ["Jeremy Letang <letang.jeremy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "zmq transport for rutile"
repository = "https://github.com/jeremyletan/rpc"
documentation = "https://github.com/jeremyletang/rpc"
keywords = ["rpc", "http"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
rpc = { version = "0.1.0", path = "../../rpc" }
log = "0.3.6"
env_logger = "0.3.3"
zmq = { git = "https://github.com/jeremyletang/rust-zmq.git", version = "0.7.0" }
